@@ -2,7 +2,7 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for sg3_utils-1.41 [20150119] [svn: r630]
+Changelog for sg3_utils-1.41 [20150119] [svn: r631]
   - sg_zone: new utility for open, close and finish
     zone commands introduced in zbc-r02
   - sg_rep_zones and sg_reset_wp: change opcodes as
@@ -15,6 +15,7 @@ Changelog for sg3_utils-1.41 [20150119] [svn: r630]
     plus support for zoning service actions
   - sg_inq+sg_vpd: fix SCSI name string decoding in
     device identification VPD page (0x83)
+    - increase sanity on Unit Serial number VPD page
   - sg_inq: improve NAA handling in dev_id VPD page
     - update version descriptor list to 20141221
   - sg_vpd: add atomic boundary values (sbc4r04)
